infrastructure/base/networking/headscale/command-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: headscale
spec:
  template:
    spec:
      containers:
      - name: headscale
        command: ["/bin/sh", "-c", "mkdir -p /var/run/headscale && headscale serve -c /etc/headscale/config.yaml"]
