infrastructure/base/networking/headscale/service-headscale.yaml
apiVersion: v1
kind: Service
metadata:
  name: headscale
  namespace: headscale
  labels:
    app: headscale
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
  - name: metrics
    port: 9090
    targetPort: 9090
    protocol: TCP
  - name: grpc
    port: 50443
    targetPort: 50443
    protocol: TCP
  selector:
    app: headscale
