infrastructure/base/networking/headscale/ingress-headscale.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: headscale-public
  namespace: headscale
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - headscale.markonakic.xyz
      secretName: headscale-tls
  rules:
    - host: headscale.markonakic.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: headscale
                port:
                  number: 8080
