infrastructure/base/networking/headscale/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: headscale
  namespace: headscale
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: traefik-traefik-security-headers@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - headscale.markonakic.xyz
    secretName: headscale-tls
  rules:
  - host: headscale.markonakic.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: headscale
            port:
              number: 8080
